# ProSe

./: .gitignore  LICENSE.hs  Makefile  ProSe.cabal  README.md  stack.yaml
examples/: Bool.pi  BuyerSeller.pi  Clients.pi  Close.pi  Consensus.pi  Counter.pi  CounterMachine.pi  Coupons.pi  DupErg.pi  Forwarder.pi  FunctionalQueue.pi  InfiniteCuts.pi  InfiniteOutputs.pi  Lottery.pi  LotteryIns.pi  Nat.pi  NoCounter.pi  ParallelClients.pi  RandomWalk.pi  RecDebias.pi  Safe1.pi  Safe2.pi  Safe3.pi  SimpleConsensus.pi  SimpleCounter.pi  SlotMachine.pi  SlotServer.pi  Stack.pi  StreamProcessing.pi  Top.pi  TutorialExamples.pi  UnaryCounter.pi  UnboundedInputs.pi  Unsafe1.pi
src/: Atoms.hs  Checker.hs  Common.hs  Exceptions.hs  InformationFlow.hs  Instrumenter.hs  Interpreter.hs  Lexer.x  Main.hs  Measure.hs  Parser.hs  Parser.y  Process.hs  Render.hs  Resolver.hs  Solver.hs  Strategy.hs  Type.hs
